--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+streamlit = "0.1.0"
+SQLAlchemy = ">2"
+sqlmodel = "0.0.16"
+pytest = "^8"
+langchain = "0.1.8"
+langchain_openai = "0.0.6"
+langchain_experimental = "0.0.53"
+jupyter = "^1.0.0"
 
 
 [build-system]
